TranslateSR/gen/SRParser.java
// Generated from C:/Users/sebas/Music/nuevo repo/Lenguajes-de-Programacion/TranslateSR/Grammar\SR.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SRParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Global=1, Int=2, Abs=3, Max=4, Min=5, Pred=6, Succ=7, Lb=8, Ub=9, Length=10, 
		Maxlength=11, Free=12, Sqrt=13, Log=14, Ceil=15, Floor=16, Round=17, Sin=18, 
		Cos=19, Tan=20, Asin=21, Acos=22, Atan=23, Random=24, Seed=25, Age=26, 
		Nap=27, Open=28, Flush=29, Close=30, Remove=31, Seek=32, Where=33, Getarg=34, 
		Write=35, Writes=36, If=37, Fi=38, P=39, V=40, Af=41, And=42, Any=43, 
		Begin=44, Body=45, Bool=46, By=47, Call=48, Cap=49, Char=50, Const=51, 
		Co=52, Create=53, Destroy=54, Downto=55, Do=56, Else=57, End=58, Enum=59, 
		Exit=60, Extend=61, External=62, Fa=63, File=64, Final=65, Forward=66, 
		High=67, Import=68, Initial=69, In=70, Low=71, Mod=72, New=73, Next=74, 
		Ni=75, Not=76, Oc=77, Od=78, On=79, Optype=80, Op=81, Or=82, Procedure=83, 
		Process=84, Proc=85, Ptr=86, Real=87, Read=88, Receive=89, Rec=90, Ref=91, 
		Reply=92, Resource=93, Res=94, Return=95, Returns=96, Sem=97, Send=98, 
		Separate=99, Skip=100, Suchthat=101, Stop=102, String=103, To=104, Type=105, 
		Union=106, Val=107, Var=108, Vm=109, Xor=110, Tk_num=111, Tk_incr=112, 
		Tk_decr=113, Tk_suma=114, Tk_exp=115, Tk_separa=116, TK_cor_izq=117, Tk_cor_der=118, 
		Tk_llave_izq=119, Tk_llave_der=120, Tk_flecha=121, Tk_mayor=122, Tk_menor=123, 
		Tk_mayor_igual=124, Tk_menor_igual=125, Tk_resta=126, Tk_mult=127, Tk_porce=128, 
		Tk_div=129, Tk_par_izq=130, Tk_par_der=131, Tk_swap=132, Tk_asign=133, 
		Tk_diferente=134, Tk_igual=135, Tk_punto=136, Tk_dos_puntos=137, Tk_coma=138, 
		Tk_ptocoma=139, Tk_string=140, Id=141, LINE_COMMENT=142, EOL=143, WS=144;
	public static final int
		RULE_s = 0, RULE_block = 1, RULE_list_declarations = 2, RULE_declarations = 3, 
		RULE_asign = 4, RULE_init_var = 5, RULE_init_const = 6, RULE_value = 7, 
		RULE_datatype = 8, RULE_expr = 9, RULE_bin_exp = 10, RULE_reserve_funct = 11, 
		RULE_control_struc = 12, RULE_for_all = 13, RULE_cuantificador = 14, RULE_iff = 15, 
		RULE_elsee = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"s", "block", "list_declarations", "declarations", "asign", "init_var", 
			"init_const", "value", "datatype", "expr", "bin_exp", "reserve_funct", 
			"control_struc", "for_all", "cuantificador", "iff", "elsee"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'global'", "'int'", "'abs'", "'max'", "'min'", "'pred'", "'succ'", 
			"'lb'", "'ub'", "'length'", "'maxlength'", "'free'", "'sqrt'", "'log'", 
			"'ceil'", "'floor'", "'round'", "'sin'", "'cos'", "'tan'", "'asin'", 
			"'acos'", "'atan'", "'random'", "'seed'", "'age'", "'nap'", "'open'", 
			"'flush'", "'close'", "'remove'", "'seek'", "'where'", "'getarg'", "'write'", 
			"'writes'", "'if'", "'fi'", "'P'", "'V'", "'af'", "'and'", "'any'", "'begin'", 
			"'body'", "'bool'", "'by'", "'call'", "'cap'", "'char'", "'const'", "'co'", 
			"'create'", "'destroy'", "'downto'", "'do'", "'else'", "'end'", "'enum'", 
			"'exit'", "'extend'", "'external'", "'fa'", "'file'", "'final'", "'forward'", 
			"'high'", "'import'", "'initial'", "'in'", "'low'", "'mod'", "'new'", 
			"'next'", "'ni'", "'not'", "'oc'", "'od'", "'on'", "'optype'", "'op'", 
			"'or'", "'procedure'", "'process'", "'proc'", "'ptr'", "'real'", "'read'", 
			"'receive'", "'rec'", "'ref'", "'reply'", "'resource'", "'res'", "'return'", 
			"'returns'", "'sem'", "'send'", "'separate'", "'skip'", "'suchthat'", 
			"'stop'", "'string'", "'to'", "'type'", "'union'", "'Val'", "'var'", 
			"'vm'", "'xor'", null, "'++'", "'--'", "'+'", "'^'", "'[]'", "'['", "']'", 
			"'{'", "'}'", "'->'", "'>'", "'<'", "'>='", "'<='", "'-'", "'*'", "'%'", 
			"'/'", "'('", "')'", "':=:'", "':='", "'!='", "'='", "'.'", "':'", "','", 
			"';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Global", "Int", "Abs", "Max", "Min", "Pred", "Succ", "Lb", "Ub", 
			"Length", "Maxlength", "Free", "Sqrt", "Log", "Ceil", "Floor", "Round", 
			"Sin", "Cos", "Tan", "Asin", "Acos", "Atan", "Random", "Seed", "Age", 
			"Nap", "Open", "Flush", "Close", "Remove", "Seek", "Where", "Getarg", 
			"Write", "Writes", "If", "Fi", "P", "V", "Af", "And", "Any", "Begin", 
			"Body", "Bool", "By", "Call", "Cap", "Char", "Const", "Co", "Create", 
			"Destroy", "Downto", "Do", "Else", "End", "Enum", "Exit", "Extend", "External", 
			"Fa", "File", "Final", "Forward", "High", "Import", "Initial", "In", 
			"Low", "Mod", "New", "Next", "Ni", "Not", "Oc", "Od", "On", "Optype", 
			"Op", "Or", "Procedure", "Process", "Proc", "Ptr", "Real", "Read", "Receive", 
			"Rec", "Ref", "Reply", "Resource", "Res", "Return", "Returns", "Sem", 
			"Send", "Separate", "Skip", "Suchthat", "Stop", "String", "To", "Type", 
			"Union", "Val", "Var", "Vm", "Xor", "Tk_num", "Tk_incr", "Tk_decr", "Tk_suma", 
			"Tk_exp", "Tk_separa", "TK_cor_izq", "Tk_cor_der", "Tk_llave_izq", "Tk_llave_der", 
			"Tk_flecha", "Tk_mayor", "Tk_menor", "Tk_mayor_igual", "Tk_menor_igual", 
			"Tk_resta", "Tk_mult", "Tk_porce", "Tk_div", "Tk_par_izq", "Tk_par_der", 
			"Tk_swap", "Tk_asign", "Tk_diferente", "Tk_igual", "Tk_punto", "Tk_dos_puntos", 
			"Tk_coma", "Tk_ptocoma", "Tk_string", "Id", "LINE_COMMENT", "EOL", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SR.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SRParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public List_declarationsContext list_declarations() {
			return getRuleContext(List_declarationsContext.class,0);
		}
		public List<DeclarationsContext> declarations() {
			return getRuleContexts(DeclarationsContext.class);
		}
		public DeclarationsContext declarations(int i) {
			return getRuleContext(DeclarationsContext.class,i);
		}
		public TerminalNode End() { return getToken(SRParser.End, 0); }
		public SContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_s; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SRListener ) ((SRListener)listener).enterS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SRListener ) ((SRListener)listener).exitS(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SRVisitor ) return ((SRVisitor<? extends T>)visitor).visitS(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SContext s() throws RecognitionException {
		SContext _localctx = new SContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_s);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			block();
			setState(36);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Tk_par_izq) {
				{
				setState(35);
				list_declarations();
				}
			}

			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Abs) | (1L << Max) | (1L << Min) | (1L << Pred) | (1L << Succ) | (1L << Lb) | (1L << Ub) | (1L << Length) | (1L << Maxlength) | (1L << Free) | (1L << Sqrt) | (1L << Log) | (1L << Ceil) | (1L << Floor) | (1L << Round) | (1L << Sin) | (1L << Cos) | (1L << Tan) | (1L << Asin) | (1L << Acos) | (1L << Atan) | (1L << Random) | (1L << Seed) | (1L << Age) | (1L << Nap) | (1L << Open) | (1L << Flush) | (1L << Close) | (1L << Remove) | (1L << Seek) | (1L << Where) | (1L << Getarg) | (1L << Write) | (1L << Writes) | (1L << If) | (1L << Const) | (1L << Fa))) != 0) || ((((_la - 67)) & ~0x3f) == 0 && ((1L << (_la - 67)) & ((1L << (High - 67)) | (1L << (Low - 67)) | (1L << (New - 67)) | (1L << (Read - 67)) | (1L << (Var - 67)) | (1L << (Tk_num - 67)) | (1L << (Tk_resta - 67)))) != 0) || _la==Tk_string || _la==Id) {
				{
				{
				setState(38);
				declarations();
				}
				}
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==End) {
				{
				setState(44);
				match(End);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode Global() { return getToken(SRParser.Global, 0); }
		public TerminalNode Id() { return getToken(SRParser.Id, 0); }
		public TerminalNode Resource() { return getToken(SRParser.Resource, 0); }
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SRListener ) ((SRListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SRListener ) ((SRListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SRVisitor ) return ((SRVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		try {
			setState(51);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Global:
				enterOuterAlt(_localctx, 1);
				{
				setState(47);
				match(Global);
				setState(48);
				match(Id);
				}
				break;
			case Resource:
				enterOuterAlt(_localctx, 2);
				{
				setState(49);
				match(Resource);
				setState(50);
				match(Id);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class List_declarationsContext extends ParserRuleContext {
		public TerminalNode Tk_par_izq() { return getToken(SRParser.Tk_par_izq, 0); }
		public TerminalNode Tk_par_der() { return getToken(SRParser.Tk_par_der, 0); }
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public List<TerminalNode> Tk_dos_puntos() { return getTokens(SRParser.Tk_dos_puntos); }
		public TerminalNode Tk_dos_puntos(int i) {
			return getToken(SRParser.Tk_dos_puntos, i);
		}
		public List<DatatypeContext> datatype() {
			return getRuleContexts(DatatypeContext.class);
		}
		public DatatypeContext datatype(int i) {
			return getRuleContext(DatatypeContext.class,i);
		}
		public List<TerminalNode> Tk_coma() { return getTokens(SRParser.Tk_coma); }
		public TerminalNode Tk_coma(int i) {
			return getToken(SRParser.Tk_coma, i);
		}
		public List_declarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_declarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SRListener ) ((SRListener)listener).enterList_declarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SRListener ) ((SRListener)listener).exitList_declarations(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SRVisitor ) return ((SRVisitor<? extends T>)visitor).visitList_declarations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final List_declarationsContext list_declarations() throws RecognitionException {
		List_declarationsContext _localctx = new List_declarationsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_list_declarations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			match(Tk_par_izq);
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 111)) & ~0x3f) == 0 && ((1L << (_la - 111)) & ((1L << (Tk_num - 111)) | (1L << (Tk_resta - 111)) | (1L << (Tk_string - 111)) | (1L << (Id - 111)))) != 0)) {
				{
				{
				setState(54);
				value();
				setState(55);
				match(Tk_dos_puntos);
				setState(56);
				datatype();
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Tk_coma) {
					{
					setState(57);
					match(Tk_coma);
					}
				}

				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(65);
			match(Tk_par_der);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationsContext extends ParserRuleContext {
		public List<AsignContext> asign() {
			return getRuleContexts(AsignContext.class);
		}
		public AsignContext asign(int i) {
			return getRuleContext(AsignContext.class,i);
		}
		public List<Init_varContext> init_var() {
			return getRuleContexts(Init_varContext.class);
		}
		public Init_varContext init_var(int i) {
			return getRuleContext(Init_varContext.class,i);
		}
		public List<Init_constContext> init_const() {
			return getRuleContexts(Init_constContext.class);
		}
		public Init_constContext init_const(int i) {
			return getRuleContext(Init_constContext.class,i);
		}
		public List<Control_strucContext> control_struc() {
			return getRuleContexts(Control_strucContext.class);
		}
		public Control_strucContext control_struc(int i) {
			return getRuleContext(Control_strucContext.class,i);
		}
		public List<Reserve_functContext> reserve_funct() {
			return getRuleContexts(Reserve_functContext.class);
		}
		public Reserve_functContext reserve_funct(int i) {
			return getRuleContext(Reserve_functContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SRListener ) ((SRListener)listener).enterDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SRListener ) ((SRListener)listener).exitDeclarations(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SRVisitor ) return ((SRVisitor<? extends T>)visitor).visitDeclarations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declarations);
		try {
			int _alt;
			setState(97);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(68); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(67);
						asign();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(70); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(73); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(72);
						init_var();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(75); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(78); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(77);
						init_const();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(80); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(83); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(82);
						control_struc();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(85); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(88); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(87);
						reserve_funct();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(90); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(93); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(92);
						expr();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(95); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsignContext extends ParserRuleContext {
		public List<TerminalNode> Id() { return getTokens(SRParser.Id); }
		public TerminalNode Id(int i) {
			return getToken(SRParser.Id, i);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode Tk_asign() { return getToken(SRParser.Tk_asign, 0); }
		public TerminalNode Tk_suma() { return getToken(SRParser.Tk_suma, 0); }
		public TerminalNode Tk_resta() { return getToken(SRParser.Tk_resta, 0); }
		public TerminalNode Tk_mult() { return getToken(SRParser.Tk_mult, 0); }
		public TerminalNode Tk_div() { return getToken(SRParser.Tk_div, 0); }
		public TerminalNode Tk_swap() { return getToken(SRParser.Tk_swap, 0); }
		public TerminalNode Tk_diferente() { return getToken(SRParser.Tk_diferente, 0); }
		public List<TerminalNode> Tk_llave_der() { return getTokens(SRParser.Tk_llave_der); }
		public TerminalNode Tk_llave_der(int i) {
			return getToken(SRParser.Tk_llave_der, i);
		}
		public List<TerminalNode> Tk_llave_izq() { return getTokens(SRParser.Tk_llave_izq); }
		public TerminalNode Tk_llave_izq(int i) {
			return getToken(SRParser.Tk_llave_izq, i);
		}
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public AsignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SRListener ) ((SRListener)listener).enterAsign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SRListener ) ((SRListener)listener).exitAsign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SRVisitor ) return ((SRVisitor<? extends T>)visitor).visitAsign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AsignContext asign() throws RecognitionException {
		AsignContext _localctx = new AsignContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_asign);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(Id);
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Tk_llave_der) {
				{
				setState(100);
				match(Tk_llave_der);
				setState(103);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
				case 1:
					{
					setState(101);
					match(Id);
					}
					break;
				case 2:
					{
					setState(102);
					value();
					}
					break;
				}
				setState(105);
				match(Tk_llave_izq);
				setState(106);
				match(Tk_llave_der);
				setState(109);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
				case 1:
					{
					setState(107);
					match(Id);
					}
					break;
				case 2:
					{
					setState(108);
					value();
					}
					break;
				}
				setState(111);
				match(Tk_llave_izq);
				}
			}

			setState(125);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Tk_asign:
				{
				setState(114);
				match(Tk_asign);
				}
				break;
			case Tk_suma:
				{
				setState(115);
				match(Tk_suma);
				setState(116);
				match(Tk_asign);
				}
				break;
			case Tk_resta:
				{
				setState(117);
				match(Tk_resta);
				setState(118);
				match(Tk_asign);
				}
				break;
			case Tk_mult:
				{
				setState(119);
				match(Tk_mult);
				setState(120);
				match(Tk_asign);
				}
				break;
			case Tk_div:
				{
				setState(121);
				match(Tk_div);
				setState(122);
				match(Tk_asign);
				}
				break;
			case Tk_swap:
				{
				setState(123);
				match(Tk_swap);
				}
				break;
			case Tk_diferente:
				{
				setState(124);
				match(Tk_diferente);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(127);
			expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
